Updating .gitignore again so ignore .so folders and libpng contents other than Android.mk and the libpng_readme.txt

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,15 @@ bin/
 gen/
 *.class
 obj/
+armeabi/
+armeabi-v7a/
+mips/
+x86/
+
+# libpng
+libpng/
+!libpng/Android.mk
+!libpng/libpng_readme.txt
 
 # Local configuration file (sdk path, etc)
 local.properties
