--- a/src/platform/windows-phone/TappyPlane/TappyPlane/TappyPlaneComp/TappyPlaneComp.vcxproj
+++ b/src/platform/windows-phone/TappyPlane/TappyPlane/TappyPlaneComp/TappyPlaneComp.vcxproj
@@ -73,7 +73,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <AdditionalIncludeDirectories>..\..\..\..\..\core;..\..\..\..\..\3rdparty\DirectXTK\Inc;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\..\..\core\framework;..\..\..\..\..\core\framework\ui;..\..\..\..\..\core\framework\direct3d;..\..\..\..\..\core\game;..\..\..\..\..\core\game\direct3d;..\..\..\..\..\3rdparty;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -90,7 +90,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <AdditionalIncludeDirectories>..\..\..\..\..\core;..\..\..\..\..\3rdparty\DirectXTK\Inc;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\..\..\core\framework;..\..\..\..\..\core\framework\ui;..\..\..\..\..\core\framework\direct3d;..\..\..\..\..\core\game;..\..\..\..\..\core\game\direct3d;..\..\..\..\..\3rdparty;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -108,7 +108,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <AdditionalIncludeDirectories>..\..\..\..\..\core;..\..\..\..\..\3rdparty\DirectXTK\Inc;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\..\..\core\framework;..\..\..\..\..\core\framework\ui;..\..\..\..\..\core\framework\direct3d;..\..\..\..\..\core\game;..\..\..\..\..\core\game\direct3d;..\..\..\..\..\3rdparty;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,7 +126,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <AdditionalIncludeDirectories>..\..\..\..\..\core;..\..\..\..\..\3rdparty\DirectXTK\Inc;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\..\..\core\framework;..\..\..\..\..\core\framework\ui;..\..\..\..\..\core\framework\direct3d;..\..\..\..\..\core\game;..\..\..\..\..\core\game\direct3d;..\..\..\..\..\3rdparty;$(ProjectDir);$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,96 +143,144 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="SimplePixelShader.hlsl">
-      <ShaderType>Pixel</ShaderType>
-      <ShaderModel>4.0_level_9_3</ShaderModel>
-    </FxCompile>
-    <FxCompile Include="SimpleVertexShader.hlsl">
-      <ShaderType>Vertex</ShaderType>
-      <ShaderModel>4.0_level_9_3</ShaderModel>
-    </FxCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\core\Assets.h" />
-    <ClInclude Include="..\..\..\..\..\core\DynamicGameObject.h" />
-    <ClInclude Include="..\..\..\..\..\core\EnvironmentType.h" />
-    <ClInclude Include="..\..\..\..\..\core\Font.h" />
-    <ClInclude Include="..\..\..\..\..\core\GameButton.h" />
-    <ClInclude Include="..\..\..\..\..\core\GameObject.h" />
-    <ClInclude Include="..\..\..\..\..\core\GameScreen.h" />
-    <ClInclude Include="..\..\..\..\..\core\GameState.h" />
-    <ClInclude Include="..\..\..\..\..\core\Glove.h" />
-    <ClInclude Include="..\..\..\..\..\core\Line.h" />
-    <ClInclude Include="..\..\..\..\..\core\Obstacle.h" />
-    <ClInclude Include="..\..\..\..\..\core\OverlapTester.h" />
-    <ClInclude Include="..\..\..\..\..\core\pch.h" />
-    <ClInclude Include="..\..\..\..\..\core\PlaneDynamicGameObject.h" />
-    <ClInclude Include="..\..\..\..\..\core\PlaneType.h" />
-    <ClInclude Include="..\..\..\..\..\core\PuffCloud.h" />
-    <ClInclude Include="..\..\..\..\..\core\Rectangle.h" />
-    <ClInclude Include="..\..\..\..\..\core\Renderer.h" />
-    <ClInclude Include="..\..\..\..\..\core\SpikeGameObject.h" />
-    <ClInclude Include="..\..\..\..\..\core\TextureRegion.h" />
-    <ClInclude Include="..\..\..\..\..\core\TouchEvent.h" />
-    <ClInclude Include="..\..\..\..\..\core\Triangle.h" />
-    <ClInclude Include="..\..\..\..\..\core\Vector2D.h" />
-    <ClInclude Include="..\..\..\..\..\core\World.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Circle.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Color.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\BasicReaderWriter.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\dds.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\DDSTextureLoader.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\Direct3DCircleBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\Direct3DLineBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\Direct3DProgram.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\Direct3DRectangleBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\Direct3DSpriteBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\DirectXHelpers.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\DirectXManager.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\direct3d\PlatformHelpers.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\DynamicGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\DynamicGridGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\FlagUtil.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\GameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\GridGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Line.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\macros.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Node.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\OverlapTester.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\pch.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Rectangle.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Triangle.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\CircleBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\Font.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\LineBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\RectangleBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\SpriteBatcher.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\TextureRegion.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\TextureWrapper.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\ui\TouchEvent.h" />
+    <ClInclude Include="..\..\..\..\..\core\framework\Vector2D.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\Assets.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\direct3d\Direct3DGameScreen.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\direct3d\Direct3DRenderer.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\EnvironmentType.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\GameButton.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\GameConstants.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\GameListener.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\GameScreen.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\GameState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\Glove.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\Obstacle.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\PlaneDynamicGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\PlaneType.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\PuffCloud.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\Renderer.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ResourceConstants.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\ScreenState.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\SpikeGameObject.h" />
+    <ClInclude Include="..\..\..\..\..\core\game\World.h" />
     <ClInclude Include="BasicTimer.h" />
-    <ClInclude Include="Direct3DAssets.h" />
-    <ClInclude Include="Direct3DBase.h" />
     <ClInclude Include="Direct3DContentProvider.h" />
-    <ClInclude Include="Direct3DGameScreen.h" />
     <ClInclude Include="Direct3DInterop.h" />
-    <ClInclude Include="Direct3DRenderer.h" />
     <ClInclude Include="DirectXHelper.h" />
     <ClInclude Include="GameSound.h" />
     <ClInclude Include="Global.h" />
-    <ClInclude Include="Helpers\MediaEnginePlayer.h" />
-    <ClInclude Include="Helpers\RandomAccessReader.h" />
-    <ClInclude Include="Helpers\SoundFileReader.h" />
-    <ClInclude Include="Helpers\XAudio2SoundPlayer.h" />
-    <ClInclude Include="RECTUtils.h" />
+    <ClInclude Include="MediaEnginePlayer.h" />
+    <ClInclude Include="RandomAccessReader.h" />
+    <ClInclude Include="SoundFileReader.h" />
+    <ClInclude Include="XAudio2SoundPlayer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\core\Assets.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\DynamicGameObject.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Font.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\GameButton.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\GameObject.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\GameScreen.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Glove.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Line.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Obstacle.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\OverlapTester.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\PlaneDynamicGameObject.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\PuffCloud.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Rectangle.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Renderer.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\SpikeGameObject.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\TextureRegion.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\TouchEvent.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Triangle.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\Vector2D.cpp" />
-    <ClCompile Include="..\..\..\..\..\core\World.cpp" />
-    <ClCompile Include="Direct3DAssets.cpp" />
-    <ClCompile Include="Direct3DBase.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\Circle.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\BasicReaderWriter.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\DDSTextureLoader.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\Direct3DCircleBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\Direct3DLineBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\Direct3DProgram.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\Direct3DRectangleBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\Direct3DSpriteBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\direct3d\DirectXManager.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\DynamicGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\DynamicGridGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\GameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\GridGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\Line.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\OverlapTester.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\Rectangle.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\Triangle.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\CircleBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\Font.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\LineBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\RectangleBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\SpriteBatcher.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\TextureRegion.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\ui\TouchEvent.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\framework\Vector2D.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\Assets.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\direct3d\Direct3DGameScreen.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\direct3d\Direct3DRenderer.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\GameButton.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\GameListener.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\GameScreen.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\Glove.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\Obstacle.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\PlaneDynamicGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\PuffCloud.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\Renderer.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\SpikeGameObject.cpp" />
+    <ClCompile Include="..\..\..\..\..\core\game\World.cpp" />
     <ClCompile Include="Direct3DContentProvider.cpp" />
-    <ClCompile Include="Direct3DGameScreen.cpp" />
     <ClCompile Include="Direct3DInterop.cpp" />
-    <ClCompile Include="Direct3DRenderer.cpp" />
     <ClCompile Include="GameSound.cpp" />
     <ClCompile Include="Global.cpp" />
-    <ClCompile Include="Helpers\MediaEnginePlayer.cpp" />
-    <ClCompile Include="Helpers\RandomAccessReader.cpp" />
-    <ClCompile Include="Helpers\SoundFileReader.cpp" />
-    <ClCompile Include="Helpers\XAudio2SoundPlayer.cpp" />
+    <ClCompile Include="MediaEnginePlayer.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="RECTUtils.cpp" />
+    <ClCompile Include="RandomAccessReader.cpp" />
+    <ClCompile Include="SoundFileReader.cpp" />
+    <ClCompile Include="XAudio2SoundPlayer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\..\3rdparty\DirectXTK\DirectXTK_WindowsPhone8.vcxproj">
-      <Project>{e0b52ae7-e160-4d32-bf3f-910b785e5a8e}</Project>
-    </ProjectReference>
+    <FxCompile Include="..\..\..\..\..\core\framework\direct3d\ColorPixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="..\..\..\..\..\core\framework\direct3d\ColorVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="..\..\..\..\..\core\framework\direct3d\TexturePixelShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="..\..\..\..\..\core\framework\direct3d\TextureVertexShader.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsPhone\v$(TargetPlatformVersion)\Microsoft.Cpp.WindowsPhone.$(TargetPlatformVersion).targets" />
