--- a/src/platform/android/AndroidManifest.xml
+++ b/src/platform/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.technegames.tappyplane"
+    package="com.gowengamedev.tappyplane"
     android:versionCode="1"
     android:versionName="1.0.0.0" >
 
@@ -17,7 +17,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.technegames.tappyplane.MainActivity"
+            android:name="com.gowengamedev.tappyplane.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
