--- a/src/platform/ios/tappyplane-Info.plist
+++ b/src/platform/ios/tappyplane-Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.technegames.tappyplane</string>
+	<string>com.gowengamedev.tappyplane</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
