Migrating to Android Studio from Eclipse

--- a/.gitignore
+++ b/.gitignore
@@ -10,18 +10,16 @@ libpng/
 !libpng/Android.mk
 !libpng/libpng_readme.txt
 
-# Eclipse
-bin/
-gen/
-*.class
-*.dex
-*.apk
-*.ap_
+# Android Studio
+build/
 obj/
-armeabi/
-armeabi-v7a/
-mips/
-x86/
+.idea/
+.gradle/
+local.properties
+*.iml
+*.lock
+*.bin
+*.so
 
 # Xcode
 *.xcuserdatad/
