Moving reusable 3DS components into framework and fixing shutdown; just need to get sound effects working now

--- a/src/platform/3ds/tappy-plane/Makefile
+++ b/src/platform/3ds/tappy-plane/Makefile
@@ -35,7 +35,9 @@ BUILD		:=	build
 SOURCES		:=	source
 SOURCES		+=	../../../core/framework/entity
 SOURCES		+=	../../../core/framework/math
+SOURCES		+=	../../../core/framework/sound/3ds
 SOURCES		+=	../../../core/framework/ui
+SOURCES		+=	../../../core/framework/ui/3ds
 SOURCES		+=	../../../core/framework/util
 SOURCES		+=	../../../core/game
 SOURCES		+=	../../../core/game/ui
@@ -43,7 +45,9 @@ DATA		:=	data
 INCLUDES	:=	include
 INCLUDES	+=	../../../core/framework/entity
 INCLUDES	+=	../../../core/framework/math
+INCLUDES	+=	../../../core/framework/sound/3ds
 INCLUDES	+=	../../../core/framework/ui
+INCLUDES	+=	../../../core/framework/ui/3ds
 INCLUDES	+=	../../../core/framework/util
 INCLUDES	+=	../../../core/game
 INCLUDES	+=	../../../core/game/ui
